--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,4 @@ import(corpustools)
 import(shiny, except=c(renderDataTable, dataTableOutput))
 importFrom(utils,data)
 importFrom(utils,packageVersion)
+importFrom(utils,write.csv)
