improving about tab

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,7 @@ import(RSQLite)
 import(corpustools)
 import(shiny, except=c(renderDataTable, dataTableOutput))
 importFrom(utils,data)
+importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
+importFrom(utils,sessionInfo)
 importFrom(utils,write.csv)
