--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(get_variant_context)
 export(hits2DT)
+export(plotTags)
 export(resources_annotated_with_term)
 export(search_gwascat)
 export(variants_from_study)
@@ -14,6 +15,7 @@ import(ggplot2)
 import(shiny, except=c(renderDataTable, dataTableOutput))
 importFrom(GenomicRanges,start)
 importFrom(IRanges,subsetByOverlaps)
+importFrom(methods,as)
 importFrom(plotly,ggplotly)
 importFrom(utils,data)
 importFrom(utils,packageDescription)
