--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: gwasCatSearch
 Type: Package
-Title: A package to support ontological search of OpenGWAS
-Version: 0.1.20
+Title: A package to support ontological search of the GWAS Catalog.
+Version: 0.1.23
 Authors@R:
     c(person(given = "Robert",
            family = "Gentleman",
