--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,16 @@
 export(getSynonyms)
 export(get_variant_context)
 export(gwasCatSearch_dbconn)
+export(gwascatdb_path)
 export(hits2DT)
 export(plotTags)
+export(process_annotated)
+export(query2table)
 export(resources_annotated_with_term)
 export(search_gwascat)
 export(variants_from_study)
 export(view_variant_context)
+import(BiocFileCache)
 import(DBI)
 import(DT)
 import(RSQLite)
