adding initial unit tests, handling gzipped tar of db

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(RSQLite)
 import(corpustools)
 import(ggplot2)
 import(shiny, except=c(renderDataTable, dataTableOutput))
+import(utils)
 importFrom(GenomicRanges,start)
 importFrom(IRanges,subsetByOverlaps)
 importFrom(methods,as)
