update with zero reliance on ontoProc for efo (still use it for onto_plot2) instead, make_oi will create the necessary ontology_index instance from the sqlite db

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,10 @@ export(getSynonyms)
 export(get_variant_context)
 export(gwasCatSearch_dbconn)
 export(hits2DT)
+export(make_oi)
 export(plotTags)
+export(process_annotated)
+export(query2table)
 export(resources_annotated_with_term)
 export(search_gwascat)
 export(variants_from_study)
@@ -18,7 +21,9 @@ import(shiny, except=c(renderDataTable, dataTableOutput))
 import(utils)
 importFrom(GenomicRanges,start)
 importFrom(IRanges,subsetByOverlaps)
+importFrom(dplyr,tbl)
 importFrom(methods,as)
+importFrom(ontologyIndex,ontology_index)
 importFrom(plotly,ggplotly)
 importFrom(utils,data)
 importFrom(utils,packageDescription)
