many changes to get rid of gwc_gr, use DB for everything

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,13 @@ import(corpustools)
 import(ggplot2)
 import(shiny, except=c(renderDataTable, dataTableOutput))
 import(utils)
+importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,start)
+importFrom(IRanges,IRanges)
 importFrom(IRanges,subsetByOverlaps)
+importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,mcols)
+importFrom(S4Vectors,metadata)
 importFrom(dplyr,tbl)
 importFrom(methods,as)
 importFrom(ontologyIndex,ontology_index)
