--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(getSynonyms)
 export(get_variant_context)
 export(gwasCatSearch_dbconn)
 export(hits2DT)
+export(make_oi)
 export(plotTags)
 export(process_annotated)
 export(query2table)
