--- a/.github/workflows/test-and-connect-publish.yaml
+++ b/.github/workflows/test-and-connect-publish.yaml
@@ -18,7 +18,7 @@
             r-version: 4.2.3
             use-public-rspm: true
 
-        - uses: r-lib/actions/check-r-package@vs
+        - uses: r-lib/actions/check-r-package@v2
             
         - name: Create manifest.json
           shell: Rscript {0}
