revamp test, test api key

--- a/.github/workflows/test-and-connect-publish.yaml
+++ b/.github/workflows/test-and-connect-publish.yaml
@@ -18,7 +18,16 @@
             r-version: 4.2.3
             use-public-rspm: true
 
+        - uses: r-lib/actions/setup-r-dependencies@v2
+          with:
+            extra-packages: any::rcmdcheck
+            needs: check
+            
         - uses: r-lib/actions/check-r-package@v2
+          with:
+            args: 'c("--no-manual", "--as-cran")'
+            error-on: '"error"'
+            check-dir: '"check"'
             
         - name: Create manifest.json
           shell: Rscript {0}
