adding manhattan plot function simple_ggmanh, adjusting app to use it

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,13 +15,16 @@ export(process_annotated)
 export(query2table)
 export(resources_annotated_with_term)
 export(search_gwascat)
+export(simple_ggmanh)
 export(variants_from_study)
 export(view_variant_context)
 import(DBI)
 import(DT)
 import(RSQLite)
 import(corpustools)
+import(ggmanh)
 import(ggplot2)
+import(rlang)
 import(shiny, except=c(renderDataTable, dataTableOutput))
 import(utils)
 importFrom(GenomicRanges,GRanges)
