a bunch of updates - trying to get to a more consistent use of the SQLite data tables and fixed bugs implemented the tools to get info from the Uberon tables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(getDiseaseLocation)
 export(getMatchedTraits)
 export(getParents)
 export(getSynonyms)
+export(getUberonText)
 export(getVersionInfo)
 export(get_variant_context)
 export(gwasCatSearch_dbconn)
