lots of updates - trying to build a searchable tc for the GWAS catalog (as opposed to EFO); also trying to create the gwc_df lazily...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,9 @@ export(getUberonText)
 export(getVersionInfo)
 export(granges_from_study)
 export(gwasCatSearch_dbconn)
+export(gwc_df)
 export(hits2DT)
+export(hits2DTGWC)
 export(make_oi)
 export(process_annotated)
 export(query2table)
