--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(EFOchildren)
 export(EFOdescendants)
 export(EFOlabels)
 export(EFOparents)
+export(GWCATID2PMID)
+export(PubMed2GWASCAT)
 export(addField2Hits)
 export(getDiseaseLocation)
 export(getMatchedTraits)
