--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: gwasCatSearch
 Type: Package
 Title: A package to support ontological search of the GWAS Catalog
-Version: 0.2.7
+Version: 0.2.8
 Authors@R:
     c(person(given = "Robert",
            family = "Gentleman",
@@ -17,7 +17,7 @@ Depends: corpustools, R (>= 3.5.0)
 Imports: methods, RSQLite, shinyjs, DBI, utils, DT, shiny, ontoProc,
 	ggplot2, plotly, GenomicRanges, S4Vectors, IRanges, 
 	ontologyIndex, dplyr, ggmanh, rlang
-Suggests: knitr, rmarkdown, testthat, gwasrapidd
+Suggests: knitr, rmarkdown, testthat, gwasrapidd, bookdown, kableExtra
 Encoding: UTF-8
 LazyData: true
 LazyDataCompression: xz
